# data_analyst_agent

./: .gitignore  README.md
backend/: .env-example  .gitignore  e2b.Dockerfile  e2b.toml  main.py  pyproject.toml  temp.json
backend/agent/: common.py  entry_graph.py  llms.py  state.py  utils.py
backend/agent/steps/: step_1_define_objective.py  step_2_data_cleaning.py  step_3_data_exploration.py  step_4_data_analysis.py  step_5_write_report.py
backend/run/: eval.ipynb  melb_2bed.csv  run_agent.ipynb
frontend/: README.md  index.html
frontend/src/: App.tsx
frontend/src/components/: AnalysisHeader.tsx  StreamingMessages.tsx
frontend/src/models/: Message.ts
frontend/src/pages/: AnalysisSteps.tsx  Index.tsx  PropertyAnalysisForm.tsx
