[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=1.5.0",
    "fastapi>=0.104.0",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.14",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydantic>=2.11.5",
    "uvicorn[standard]>=0.24.0",
]
